# iot-boards

./: .gitignore  .pre-commit-config.yaml  DATA_FORMAT.md  LICENSE  README.md
esp-idf-humidity/: .ccls  .gitignore  CMakeLists.txt  REFERENCES.md  partitions.csv  partitions.s2.csv  platformio.ini  pyproject.toml  sdkconfig.defaults
esp-idf-humidity/components/alarm/: CMakeLists.txt  Kconfig  alarm.c  alarm.h
esp-idf-humidity/components/backoffAlgorithm-1.0.1/: CHANGELOG.md  CMakeLists.txt  README.md
esp-idf-humidity/components/backoffAlgorithm-1.0.1/source/: backoff_algorithm.c
esp-idf-humidity/components/blinky/: CMakeLists.txt  Kconfig  blinky.c  blinky.h
esp-idf-humidity/components/esp_cron/: README.md  cron.c
esp-idf-humidity/components/esp_cron/include/: cron.h
esp-idf-humidity/components/esp_cron/test/: test_cron.c  test_cron_list.c
esp-idf-humidity/components/i2cdev/: CMakeLists.txt  Kconfig  i2cdev.c  i2cdev.h
esp-idf-humidity/components/ltr390/: CMakeLists.txt  Kconfig  ltr390.c  ltr390.h  ltr390mgr.c  ltr390mgr.h
esp-idf-humidity/components/mqttmgr/: CMakeLists.txt  Kconfig  mqttlog.c  mqttlog.h  mqttmgr.c  mqttmgr.h
esp-idf-humidity/components/otamgr/: CMakeLists.txt  Kconfig  otamgr.c  otamgr.h
esp-idf-humidity/components/proto/: CMakeLists.txt  Makefile  README  commands.proto
esp-idf-humidity/components/sensormgr/: CMakeLists.txt  Kconfig  sensormgr.c  sensormgr.h
esp-idf-humidity/components/sht4x/: CMakeLists.txt  Kconfig  sht4x.c  sht4x.h  sht4xmgr.c  sht4xmgr.h
esp-idf-humidity/components/shtc3/: CMakeLists.txt  Kconfig  shtc3.c  shtc3.h  shtc3mgr.c  shtc3mgr.h
esp-idf-humidity/components/touchbtn/: CMakeLists.txt  Kconfig  touchbtn.c  touchbtn.h  touchbtn_esp32.c  touchbtn_esp32.h  touchbtn_esp32s2.c  touchbtn_esp32s2.h
esp-idf-humidity/include/: mqtt.h  sensor.h  uuid.h  wifi_provision.h  zones.json
esp-idf-humidity/src/: CMakeLists.txt  main.c  main.cpp  mqtt.c  mqtt.cpp  sensor.c  uuid.c  wifi_provision.cpp
esp-idf-humidity/test/: test_sensor.c
esp-idf-humidity/test/utils/: cmd_led.py  cmd_location.py  cmd_send.py  cmd_stats.py  cmd_update.py
esp32-humidity/: platformio.ini  pyproject.toml
esp32-humidity/src/: display.cpp  display.h  main.cpp  pins.h
(+77 files in other folders)
