[tool.poetry]
name = "esp-idf-humidity"
version = "0.1.0"
description = ""
authors = ["Paul Collins <paul.collins.iii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
platformio = "^6.0.1"
ipython = "^8.10.0"
protobuf = "^3.20.2"
paho-mqtt = "^1.6.1"
asyncio-mqtt = "^0.11.0"
mypy-protobuf = "^3.0.0"
construct = "^2.10.68"
pygdbmi = "<=0.9.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
