[tool.poetry]
name = "esp32-humidity"
version = "0.1.0"
description = "Poetry config for platformio"
authors = ["Paul Collins <paul.collins.iii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
platformio = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
